--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rly-network/mobile-sdk",
-  "version": "1.1.0-beta.3",
+  "version": "1.1.0",
   "description": "test",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
