--- a/mobile-sdk/package.json
+++ b/mobile-sdk/package.json
@@ -173,6 +173,7 @@
     "@ethersproject/shims": "^5.7.0",
     "@maticnetwork/maticjs": "^3.5.0",
     "@maticnetwork/maticjs-ethers": "^1.0.2",
+    "@rly-network/gasless-transaction-sdk": "0.1.0-beta.0",
     "axios": "^1.2.1",
     "buffer": "^6.0.3",
     "ethers": "^5.7.2",
