add gasless-transaction-sdk to transformIgnorePatterns jest config
otherwise jest/babel doesnt compile gasless-transaction-sdk (by default only compiles
react-native)

--- a/mobile-sdk/package.json
+++ b/mobile-sdk/package.json
@@ -99,6 +99,9 @@
       "<rootDir>/example/node_modules",
       "<rootDir>/lib/"
     ],
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(@rly-network/gasless-transaction-sdk|react-native|@react-native)/)"
+    ],
     "testPathIgnorePatterns": [
       "<rootDir>/src/__tests__/__utils__/"
     ]
