reenable claim mumbai in CI full suite
also fix a bug where the mumbai tests ran in parallel without creating a new wallet,
causing an "already dusted" error

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -205,6 +205,8 @@ workflows:
         bundle_identifier: network.rly.example.RlyNetworkMobileSdkExample
       vars:
         BUNDLE_ID: "network.rly.example.RlyNetworkMobileSdkExample"
+      groups:
+        - full-suite-tests
     cache:
       cache_paths:
         - $CM_BUILD_DIR/node_modules
@@ -386,6 +388,7 @@ workflows:
       <<: *default_environments
       groups:
         - publish-npm-group
+        - full-suite-tests
     cache:
       cache_paths:
         - $CM_BUILD_DIR/node_modules
