--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -191,6 +191,8 @@ workflows:
         bundle_identifier: network.rly.example.RlyNetworkMobileSdkExample
       vars:
         BUNDLE_ID: 'network.rly.example.RlyNetworkMobileSdkExample'
+      groups:
+        - full-suite-tests
     cache:
       cache_paths:
         - $CM_BUILD_DIR/node_modules
@@ -362,6 +364,7 @@ workflows:
       <<: *default_environments
       groups:
         - publish-npm-group
+        - full-suite-tests
     cache:
       cache_paths:
         - $CM_BUILD_DIR/node_modules
