use 9.8.1 for npm in CI
using "latest" doesnt seem to work right now on codemagic

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,7 @@
 definitions:
   default_environments: &default_environments
     node: 16.14.2
-    npm: latest
+    npm: 9.8.1
   trigger_on_main_push: &trigger_on_main_push
     triggering:
       events:
