--- a/example/package.json
+++ b/example/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "react": "18.1.0",
-    "react-native": "0.70.8"
+    "react-native": "^0.72.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "babel-plugin-module-resolver": "^4.1.0",
-    "metro-react-native-babel-preset": "0.72.3"
+    "metro-react-native-babel-preset": "0.76.9"
   }
 }
