--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-native": "0.70.8",
     "react-native-builder-bob": "^0.20.1",
     "release-it": "^15.0.0",
+    "typedoc": "^0.25.12",
     "typescript": "^4.5.2"
   },
   "resolutions": {
