update release-it to create tag and gh release, rely on action for publish

--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
   },
   "homepage": "https://github.com/rally-dfs/rly-network-mobile-sdk#readme",
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.7",
@@ -116,7 +117,7 @@
       "tagName": "v${version}"
     },
     "npm": {
-      "publish": true
+      "publish": false
     },
     "github": {
       "release": true
