upgrade yarn to use for release

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,12 @@ example_expo/src/private_config.ts
 
 #typedoc
 docs/
+
+# Yarn
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
