--- a/package.json
+++ b/package.json
@@ -181,5 +181,6 @@
     "ethers": "5.7.2",
     "react-native-get-random-values": "^1.8.0",
     "yarn": "^1.22.19"
-  }
+  },
+  "packageManager": "yarn@4.1.1"
 }
