enable corepack in ci

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,6 +35,8 @@ jobs:
           node-version: 20.x
           cache: 'yarn'
           cache-dependency-path: './yarn.lock'
+      - name: Enable corepack
+        run: corepack enable
       - name: Install dependencies
         run: yarn install
       - name: Build docs
