--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,6 +25,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - run: corepack enable
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup Pages
@@ -35,8 +36,6 @@ jobs:
           node-version: 20.x
           cache: 'yarn'
           cache-dependency-path: './yarn.lock'
-      - name: Enable corepack
-        run: corepack enable
       - name: Install dependencies
         run: yarn install
       - name: Build docs
