--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           node-version: 20.x
           registry-url: https://registry.npmjs.org/
+          scope: '@rly-network'
       - run: yarn install --frozen-lockfile
       - run: yarn prepare
       - run: yarn npm publish
